Fix url bar contents shifting on focus

--- a/ShadowFox_customization/userChrome_customization.css
+++ b/ShadowFox_customization/userChrome_customization.css
@@ -63,7 +63,7 @@
   }
   #urlbar-input-container {
     padding: 0 !important;
-    height: 100% !important;
+    height: var(--urlbar-height) !important;
   }
   #identity-box {
     padding-block: var(--urlbar-icon-padding)
